// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Grid Auto Flow 1`] = `
<div
  className="gl-grid-root"
>
  <div
    className="gl-grid-content"
  >
    <div
      className="gl-grid"
    >
      <div
        className="gl-grid__item--1 box1"
      >
        A
      </div>
      <div
        className="gl-grid__item--2 gl-grid__item--stretch box2"
      >
        B
      </div>
      <div
        className="gl-grid__item--4 box3"
      >
        C
      </div>
      <div
        className="gl-grid__item--3 box4"
      >
        D
      </div>
      <div
        className="gl-grid__item--2 box5"
        style={
          Object {
            "height": 100,
          }
        }
      >
        E
      </div>
      <div
        className="gl-grid__item--2 box1"
      >
        A
      </div>
      <div
        className="gl-grid__item--2 box2"
      >
        B
      </div>
      <div
        className="gl-grid__item--2 box3"
      >
        C
      </div>
      <div
        className="gl-grid__item--2 box4"
      >
        D
      </div>
      <div
        className="gl-grid__item--2 box5"
      >
        E
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Fraction 1`] = `
<div
  className="gl-grid-root"
>
  <div
    className="gl-grid-content"
  >
    <h1>
      nth
    </h1>
    <div
      className="gl-grid gl-grid--margin gl-grid__item--12"
    >
      <div
        className="gl-grid__item--1fr box1"
      >
        1 / 8
      </div>
      <div
        className="gl-grid__item--1fr box2"
      >
        1 / 8
      </div>
      <div
        className="gl-grid__item--1fr box3"
      >
        1 / 8
      </div>
      <div
        className="gl-grid__item--1fr box4"
      >
        1 / 8
      </div>
      <div
        className="gl-grid__item--1fr box5"
      >
        1 / 8
      </div>
      <div
        className="gl-grid__item--1fr box1"
      >
        1 / 8
      </div>
      <div
        className="gl-grid__item--1fr box2"
      >
        1 / 8
      </div>
      <div
        className="gl-grid__item--1fr box3"
      >
        1 / 8
      </div>
    </div>
    <div
      className="gl-grid gl-grid--margin gl-grid__item--12"
    >
      <div
        className="gl-grid__item--1fr box2"
      >
        1 / 7
      </div>
      <div
        className="gl-grid__item--1fr box3"
      >
        1 / 7
      </div>
      <div
        className="gl-grid__item--1fr box4"
      >
        1 / 7
      </div>
      <div
        className="gl-grid__item--1fr box5"
      >
        1 / 7
      </div>
      <div
        className="gl-grid__item--1fr box1"
      >
        1 / 7
      </div>
      <div
        className="gl-grid__item--1fr box2"
      >
        1 / 7
      </div>
      <div
        className="gl-grid__item--1fr box3"
      >
        1 / 7
      </div>
    </div>
    <div
      className="gl-grid gl-grid--margin gl-grid__item--12"
    >
      <div
        className="gl-grid__item--1fr box3"
      >
        1 / 6
      </div>
      <div
        className="gl-grid__item--1fr box4"
      >
        1 / 6
      </div>
      <div
        className="gl-grid__item--1fr box5"
      >
        1 / 6
      </div>
      <div
        className="gl-grid__item--1fr box1"
      >
        1 / 6
      </div>
      <div
        className="gl-grid__item--1fr box2"
      >
        1 / 6
      </div>
      <div
        className="gl-grid__item--1fr box3"
      >
        1 / 6
      </div>
    </div>
    <div
      className="gl-grid gl-grid--margin gl-grid__item--12"
    >
      <div
        className="gl-grid__item--1fr box4"
      >
        1 / 5
      </div>
      <div
        className="gl-grid__item--1fr box5"
      >
        1 / 5
      </div>
      <div
        className="gl-grid__item--1fr box1"
      >
        1 / 5
      </div>
      <div
        className="gl-grid__item--1fr box2"
      >
        1 / 5
      </div>
      <div
        className="gl-grid__item--1fr box3"
      >
        1 / 5
      </div>
    </div>
    <div
      className="gl-grid gl-grid--margin gl-grid__item--12"
    >
      <div
        className="gl-grid__item--1fr box5"
      >
        1 / 4
      </div>
      <div
        className="gl-grid__item--1fr box1"
      >
        1 / 4
      </div>
      <div
        className="gl-grid__item--1fr box2"
      >
        1 / 4
      </div>
      <div
        className="gl-grid__item--1fr box3"
      >
        1 / 4
      </div>
    </div>
    <div
      className="gl-grid gl-grid--margin gl-grid__item--12"
    >
      <div
        className="gl-grid__item--1fr box1"
      >
        1 / 3
      </div>
      <div
        className="gl-grid__item--1fr box2"
      >
        1 / 3
      </div>
      <div
        className="gl-grid__item--1fr box3"
      >
        1 / 3
      </div>
    </div>
    <div
      className="gl-grid gl-grid--margin gl-grid__item--12"
    >
      <div
        className="gl-grid__item--1fr box2"
      >
        1 / 2
      </div>
      <div
        className="gl-grid__item--1fr box3"
      >
        1 / 2
      </div>
    </div>
    <div
      className="gl-grid gl-grid--margin gl-grid__item--12"
    >
      <div
        className="gl-grid__item--1fr box3"
      >
        1 / 1
      </div>
    </div>
    <h1>
      1 - 2
    </h1>
    <div
      className="gl-grid gl-grid--margin gl-grid__item--12"
    >
      <div
        className="gl-grid__item--1fr box1"
      >
        1 / 3
      </div>
      <div
        className="gl-grid__item--2fr box2"
      >
        2 / 3
      </div>
    </div>
    <h1>
      4 - 1 - 1
    </h1>
    <div
      className="gl-grid gl-grid--margin gl-grid__item--12"
    >
      <div
        className="gl-grid__item--4fr box3"
      >
        4 / 6
      </div>
      <div
        className="gl-grid__item--1fr box4"
      >
        1 / 6
      </div>
      <div
        className="gl-grid__item--1fr box5"
      >
        1 / 6
      </div>
    </div>
    <h1>
      Custom
    </h1>
    <div
      className="gl-grid gl-grid--margin gl-grid__item--12"
    >
      <div
        className="gl-grid__item--1fr box1"
      >
        1
      </div>
      <div
        className="gl-grid__item--1fr box2"
      >
        2
      </div>
      <div
        className="gl-grid__item--1fr box3"
      >
        3
      </div>
      <div
        className="gl-grid__item--1fr box4"
      >
        4
      </div>
      <div
        className="gl-grid__item--1fr box5"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Nested 1`] = `
<div
  className="gl-grid-root"
>
  <div
    className="gl-grid-content"
  >
    <div
      className="gl-grid gl-grid--margin"
    >
      <div
        className="gl-grid__item--6 gl-grid box1"
      >
        <div
          className="gl-grid__item--3 box3"
        >
          C
        </div>
        <div
          className="gl-grid__item--3 box4"
        >
          D
        </div>
      </div>
      <div
        className="gl-grid__item--6 gl-grid box2"
      >
        <div
          className="gl-grid__item--3 box4"
        >
          D
        </div>
        <div
          className="gl-grid__item--3 box5"
        >
          E
        </div>
      </div>
    </div>
    <div
      className="gl-grid gl-grid--margin"
    >
      <div
        className="gl-grid__item--6 gl-grid box1"
      >
        <div
          className="gl-grid__item--3 gl-grid__item--offset-3 box4"
        >
          D
        </div>
      </div>
      <div
        className="gl-grid__item--6 gl-grid box2"
      >
        <div
          className="gl-grid__item--1 box4"
        >
          D
        </div>
        <div
          className="gl-grid__item--1 gl-grid__item--offset-4 box5"
        >
          E
        </div>
      </div>
    </div>
    <div
      className="gl-grid gl-grid--margin"
    >
      <div
        className="gl-grid__item--6 gl-grid box2"
      >
        <div
          className="gl-grid__item--1 box4"
        >
          D
        </div>
        <div
          className="gl-grid__item--1 box5"
        >
          E
        </div>
        <div
          className="gl-grid__item--1 box4"
        >
          D
        </div>
        <div
          className="gl-grid__item--1 box5"
        >
          E
        </div>
        <div
          className="gl-grid__item--1 box4"
        >
          D
        </div>
        <div
          className="gl-grid__item--1 box5"
        >
          E
        </div>
        <div
          className="gl-grid__item--1 box4"
        >
          D
        </div>
        <div
          className="gl-grid__item--1 box5"
        >
          E
        </div>
        <div
          className="gl-grid__item--1 box4"
        >
          D
        </div>
        <div
          className="gl-grid__item--1 box5"
        >
          E
        </div>
        <div
          className="gl-grid__item--1 box4"
        >
          D
        </div>
        <div
          className="gl-grid__item--1 box5"
        >
          E
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Offset 1`] = `
<div
  className="gl-grid-root"
>
  <div
    className="gl-grid-content"
  >
    <div
      className="gl-grid"
    >
      <div
        className="gl-grid__item--1 box1"
      >
        +0
      </div>
      <div
        className="gl-grid__item--1 gl-grid__item--offset-7 box1"
      >
        +7
      </div>
    </div>
    <div
      className="gl-grid"
    >
      <div
        className="gl-grid__item--1 gl-grid__item--offset-1 box2"
      >
        +1
      </div>
      <div
        className="gl-grid__item--1 gl-grid__item--offset-5 box2"
      >
        +5
      </div>
      <div
        className="gl-grid__item--1 gl-grid__item--offset-1 box2"
      >
        +1
      </div>
    </div>
    <div
      className="gl-grid"
    >
      <div
        className="gl-grid__item--1 gl-grid__item--offset-2 box3"
      >
        +2
      </div>
      <div
        className="gl-grid__item--1 gl-grid__item--offset-3 box3"
      >
        +3
      </div>
      <div
        className="gl-grid__item--1 gl-grid__item--offset-3 box3"
      >
        +3
      </div>
    </div>
    <div
      className="gl-grid"
    >
      <div
        className="gl-grid__item--1 gl-grid__item--offset-3 box4"
      >
        +3
      </div>
      <div
        className="gl-grid__item--1 gl-grid__item--offset-1 box4"
      >
        +1
      </div>
      <div
        className="gl-grid__item--1 gl-grid__item--offset-5 box4"
      >
        +5
      </div>
    </div>
    <div
      className="gl-grid"
    >
      <div
        className="gl-grid__item--1 gl-grid__item--offset-4 box5"
      >
        +4
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid Sizing 1`] = `
<div
  className="gl-grid-root"
>
  <div
    className="gl-grid-content"
  >
    <div
      className="gl-grid"
    >
      <div
        className="gl-grid__item--1 box1"
      >
        1
      </div>
      <div
        className="gl-grid__item--1 box1"
      >
        1
      </div>
      <div
        className="gl-grid__item--1 box1"
      >
        1
      </div>
      <div
        className="gl-grid__item--1 box1"
      >
        1
      </div>
      <div
        className="gl-grid__item--1 box1"
      >
        1
      </div>
      <div
        className="gl-grid__item--1 box1"
      >
        1
      </div>
      <div
        className="gl-grid__item--1 box1"
      >
        1
      </div>
      <div
        className="gl-grid__item--1 box1"
      >
        1
      </div>
      <div
        className="gl-grid__item--1 box1"
      >
        1
      </div>
      <div
        className="gl-grid__item--1 box1"
      >
        1
      </div>
      <div
        className="gl-grid__item--1 box1"
      >
        1
      </div>
      <div
        className="gl-grid__item--1 box1"
      >
        1
      </div>
    </div>
    <div
      className="gl-grid"
    >
      <div
        className="gl-grid__item--2 box2"
      >
        2
      </div>
      <div
        className="gl-grid__item--2 box2"
      >
        2
      </div>
      <div
        className="gl-grid__item--2 box2"
      >
        2
      </div>
      <div
        className="gl-grid__item--2 box2"
      >
        2
      </div>
      <div
        className="gl-grid__item--2 box2"
      >
        2
      </div>
      <div
        className="gl-grid__item--2 box2"
      >
        2
      </div>
    </div>
    <div
      className="gl-grid"
    >
      <div
        className="gl-grid__item--3 box3"
      >
        3
      </div>
      <div
        className="gl-grid__item--3 box3"
      >
        3
      </div>
      <div
        className="gl-grid__item--3 box3"
      >
        3
      </div>
      <div
        className="gl-grid__item--3 box3"
      >
        3
      </div>
    </div>
    <div
      className="gl-grid"
    >
      <div
        className="gl-grid__item--4 box4"
      >
        4
      </div>
      <div
        className="gl-grid__item--4 box4"
      >
        4
      </div>
      <div
        className="gl-grid__item--4 box4"
      >
        4
      </div>
    </div>
    <div
      className="gl-grid"
    >
      <div
        className="gl-grid__item--6 box5"
      >
        6
      </div>
      <div
        className="gl-grid__item--6 box5"
      >
        6
      </div>
    </div>
    <div
      className="gl-grid"
    >
      <div
        className="gl-grid__item--12 box1"
      >
        12
      </div>
    </div>
  </div>
</div>
`;
